--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/Neurotoxin.Contour.Modules.csproj
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/Neurotoxin.Contour.Modules.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ftplib">
-      <HintPath>..\packages\ftplib.1.0.1.2\lib\net35\ftplib.dll</HintPath>
+    <Reference Include="Ftp">
+      <HintPath>..\packages\Ftp.dll.2.0.13217.1550\lib\Ftp.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Composite">
       <HintPath>..\..\Resources\Prism\Microsoft.Practices.Composite.dll</HintPath>
@@ -48,8 +48,12 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="PresentationFramework.Aero" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xaml" />
@@ -61,9 +65,25 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FtpBrowser\ViewModels\FtpItem.cs" />
+    <Compile Include="FtpBrowser\Converters\PaneHeaderBackgroundConverter.cs" />
+    <Compile Include="FtpBrowser\Converters\SizeAlignmentConverter.cs" />
+    <Compile Include="FtpBrowser\Converters\SizeConverter.cs" />
+    <Compile Include="FtpBrowser\Converters\TitleConverter.cs" />
+    <Compile Include="FtpBrowser\Converters\TitleIdConverter.cs" />
+    <Compile Include="FtpBrowser\Events\ActivePaneChangedEvent.cs" />
+    <Compile Include="FtpBrowser\Helpers\FileSystemItemViewModelComparer.cs" />
+    <Compile Include="FtpBrowser\Models\FileSystemItem.cs" />
+    <Compile Include="FtpBrowser\Models\ItemSubtype.cs" />
+    <Compile Include="FtpBrowser\Models\ItemType.cs" />
+    <Compile Include="FtpBrowser\ViewModels\LocalFileSystemContentViewModel.cs" />
+    <Compile Include="FtpBrowser\ViewModels\PaneViewModelBase.cs" />
+    <Compile Include="FtpBrowser\ViewModels\FtpContentViewModel.cs" />
+    <Compile Include="FtpBrowser\ViewModels\FileSystemItemViewModel.cs" />
     <Compile Include="FtpBrowser\ModuleInit.cs" />
     <Compile Include="FtpBrowser\ViewModels\FtpBrowserViewModel.cs" />
+    <Compile Include="FtpBrowser\Views\PaneView.xaml.cs">
+      <DependentUpon>PaneView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="FtpBrowser\Views\FtpBrowserView.xaml.cs">
       <DependentUpon>FtpBrowserView.xaml</DependentUpon>
     </Compile>
@@ -91,6 +111,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="FtpBrowser\Views\PaneView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="FtpBrowser\Views\FtpBrowserView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -106,12 +130,18 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="HexViewer\Resources\warning.ico" />
-    <Content Include="Resources\hidden_achivement.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
