--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/packages.config
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ftplib" version="1.0.1.2" targetFramework="net40" />
-  <package id="System.Net.FtpClient" version="1.0.4965.13659" targetFramework="net40" />
+  <package id="Ftp.dll" version="2.0.13217.1550" targetFramework="net40" />
 </packages>
