--- a/Neurotoxin.Contour/Neurotoxin.Contour.Presentation/Neurotoxin.Contour.Presentation.csproj
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Presentation/Neurotoxin.Contour.Presentation.csproj
@@ -87,6 +87,8 @@
     <Compile Include="Extensions\FrameworkElementExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\StfsPackageExtensions.cs" />
+    <Compile Include="Infrastructure\AsyncResult.cs" />
+    <Compile Include="Infrastructure\BindingProxy.cs" />
     <Compile Include="Infrastructure\Constants\LoadCommand.cs" />
     <Compile Include="Infrastructure\MapDataGridSortingEventToCommand.cs" />
     <Compile Include="Infrastructure\DelegateCommand.cs" />
