--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/Neurotoxin.Contour.Modules.csproj
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/Neurotoxin.Contour.Modules.csproj
@@ -68,6 +68,7 @@
     <Compile Include="FtpBrowser\Constants\ConnectionType.cs" />
     <Compile Include="FtpBrowser\Constants\CopyAction.cs" />
     <Compile Include="FtpBrowser\Constants\CopyActionScope.cs" />
+    <Compile Include="FtpBrowser\Constants\TitleType.cs" />
     <Compile Include="FtpBrowser\Constants\ToggleSelectionMode.cs" />
     <Compile Include="FtpBrowser\Constants\CopyBehavior.cs" />
     <Compile Include="FtpBrowser\Constants\TransferErrorType.cs" />
@@ -83,48 +84,48 @@
     <Compile Include="FtpBrowser\Events\TransferStartedEvent.cs" />
     <Compile Include="FtpBrowser\Exceptions\TransferException.cs" />
     <Compile Include="FtpBrowser\Models\FileSystemItem.cs" />
-    <Compile Include="FtpBrowser\Models\ItemSubtype.cs" />
-    <Compile Include="FtpBrowser\Models\ItemType.cs" />
+    <Compile Include="FtpBrowser\Constants\ItemType.cs" />
     <Compile Include="FtpBrowser\Events\FtpOperationProgressChangedEventHandler.cs" />
     <Compile Include="FtpBrowser\Events\FtpOperationFinishedEventHandler.cs" />
     <Compile Include="FtpBrowser\Events\FtpOperationStartedEventHandler.cs" />
     <Compile Include="FtpBrowser\Models\FtpConnection.cs" />
+    <Compile Include="FtpBrowser\Models\RecognitionInformation.cs" />
     <Compile Include="FtpBrowser\Models\StoredConnectionBase.cs" />
     <Compile Include="FtpBrowser\Models\TransferErrorDialogResult.cs" />
-    <Compile Include="FtpBrowser\ViewModels\IPaneViewModel.cs" />
+    <Compile Include="FtpBrowser\Interfaces\IPaneViewModel.cs" />
     <Compile Include="FtpBrowser\ViewModels\NewConnectionPlaceholderViewModel.cs" />
-    <Compile Include="FtpBrowser\ViewModels\IStoredConnectionViewModel.cs" />
+    <Compile Include="FtpBrowser\Interfaces\IStoredConnectionViewModel.cs" />
     <Compile Include="FtpBrowser\ViewModels\FtpConnectionItemViewModel.cs" />
     <Compile Include="FtpBrowser\ViewModels\PaneViewModelBase.cs" />
     <Compile Include="FtpBrowser\ViewModels\StoredConnectionsViewModel.cs" />
-    <Compile Include="FtpBrowser\ViewModels\Helpers\IFileManager.cs" />
+    <Compile Include="FtpBrowser\Interfaces\IFileManager.cs" />
     <Compile Include="FtpBrowser\ViewModels\Helpers\LocalWrapper.cs" />
     <Compile Include="FtpBrowser\ViewModels\Helpers\TitleManager.cs" />
     <Compile Include="FtpBrowser\ViewModels\Helpers\FtpWrapper.cs" />
-    <Compile Include="FtpBrowser\ViewModels\IFileListPaneViewModel.cs" />
+    <Compile Include="FtpBrowser\Interfaces\IFileListPaneViewModel.cs" />
     <Compile Include="FtpBrowser\ViewModels\LocalPaneViewModel.cs" />
     <Compile Include="FtpBrowser\ViewModels\FileListPaneViewModelBase.cs" />
     <Compile Include="FtpBrowser\ViewModels\FtpContentViewModel.cs" />
     <Compile Include="FtpBrowser\ViewModels\FileSystemItemViewModel.cs" />
     <Compile Include="FtpBrowser\ModuleInit.cs" />
     <Compile Include="FtpBrowser\ViewModels\FtpBrowserViewModel.cs" />
-    <Compile Include="FtpBrowser\Views\NewConnectionDialog.xaml.cs">
+    <Compile Include="FtpBrowser\Views\Dialogs\NewConnectionDialog.xaml.cs">
       <DependentUpon>NewConnectionDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="FtpBrowser\Views\StoredConnectionsView.xaml.cs">
       <DependentUpon>StoredConnectionsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FtpBrowser\Views\ReconnectionDialog.xaml.cs">
+    <Compile Include="FtpBrowser\Views\Dialogs\ReconnectionDialog.xaml.cs">
       <DependentUpon>ReconnectionDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FtpBrowser\Views\ITransferErrorDialog.cs" />
-    <Compile Include="FtpBrowser\Views\ReadErrorDialog.xaml.cs">
+    <Compile Include="FtpBrowser\Interfaces\ITransferErrorDialog.cs" />
+    <Compile Include="FtpBrowser\Views\Dialogs\ReadErrorDialog.xaml.cs">
       <DependentUpon>ReadErrorDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FtpBrowser\Views\WriteErrorDialog.xaml.cs">
+    <Compile Include="FtpBrowser\Views\Dialogs\WriteErrorDialog.xaml.cs">
       <DependentUpon>WriteErrorDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FtpBrowser\Views\TransferProgressDialog.xaml.cs">
+    <Compile Include="FtpBrowser\Views\Dialogs\TransferProgressDialog.xaml.cs">
       <DependentUpon>TransferProgressDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="FtpBrowser\Views\PaneView.xaml.cs">
@@ -157,7 +158,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="FtpBrowser\Views\NewConnectionDialog.xaml">
+    <Page Include="FtpBrowser\Views\Dialogs\NewConnectionDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -165,19 +166,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="FtpBrowser\Views\ReconnectionDialog.xaml">
+    <Page Include="FtpBrowser\Views\Dialogs\ReconnectionDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="FtpBrowser\Views\ReadErrorDialog.xaml">
+    <Page Include="FtpBrowser\Views\Dialogs\ReadErrorDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="FtpBrowser\Views\WriteErrorDialog.xaml">
+    <Page Include="FtpBrowser\Views\Dialogs\WriteErrorDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="FtpBrowser\Views\TransferProgressDialog.xaml">
+    <Page Include="FtpBrowser\Views\Dialogs\TransferProgressDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -207,6 +208,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
